feat: Integration of the payment SDK
- Set up the app & store for IAPs
- No communication will be made with the backend
- Hardcoded sample product id.

Tapping “upgrade now” brings up the option to make an in-app purchase, Payment can be made “successfully”, and considered complete on receiving a receipt for an IAP.

fixes: LEARNER-8429

--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -270,6 +270,7 @@ dependencies {
         exclude group: 'org.hamcrest'
     }
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${KOTLIN_VERSION}"
+    implementation "com.android.billingclient:billing-ktx:$kotlin_version_billing"
 
     /**
      * Using debugImplementation here, so that LeakCanary only runs with debug variants of the builds.
