fix: Gradle command

--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build Project
         working-directory: ${{ env.SAMPLE_PATH }}
-        run: .gradlew assembledebug
+        run: ./gradlew assembledebug
 
       - name: Upload build ouputs (APKS)
         uses: actions/upload-artifact@v2
