--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-#      - name: Copy C! gradle.properties
-#        run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
+      - name: Copy C! gradle.properties
+        run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
 
       - name: set up JDK 8
         uses: actions/setup-java@v2
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build Project
         working-directory: ${{ env.SAMPLE_PATH }}
-        run: ./gradlew assembledebug
+        run: ./gradlew assembleDebug
 
       - name: Upload build ouputs (APKS)
         uses: actions/upload-artifact@v2
