--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build-outputs
-          path: app/build/outputs
+          path: OpenEdXMobile/build/outputs
 
   test:
     needs: build
