--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -35,6 +35,7 @@ jobs:
     strategy:
       matrix:
         api-level: [ 24, 27, 30 ]
+      fail-fast: false
 
     steps:
       - name: Checkout
@@ -50,11 +51,12 @@ jobs:
           java-version: '8'
 
       - name: Run tests
-        uses: reactivecircus/android-emulator-runner@v2
+        uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: ${{ matrix.api-level }}
           arch: x86
           emulator-options: -no-window -noaudio
           disable-animations: true
           target: google_apis
+          ndk: 21.4.7075529
           script: ./gradlew jacocoTestProdDebugUnitTestReport
