--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -50,6 +50,16 @@ jobs:
           distribution: 'adopt'
           java-version: '8'
 
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 2.7
+            architecture: x64
+            - run: |
+              python -m pip install --upgrade pip
+              pip install --user codecov
+              pip install --user pillow
+
       - name: Run tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
