--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -54,11 +54,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 2.7
-            architecture: x64
-            - run: |
-              python -m pip install --upgrade pip
-              pip install --user codecov
-              pip install --user pillow
+
+      - name: Install dependecies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --user codecov
+          pip install --user pillow
 
       - name: Run tests
         uses: ReactiveCircus/android-emulator-runner@v2
