--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -33,8 +33,8 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 30
     strategy:
-      matrix:
-        api-level: [ 24, 27, 30 ]
+#      matrix:
+#        api-level: [ 24, 27, 30 ]
       fail-fast: false
 
     steps:
