--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -105,7 +105,7 @@ jobs:
           script: ./gradlew jacocoTestProdDebugUnitTestReport
 
       - name: Run E2E
-        if: ${{ always }}
+        if: always()
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 28
@@ -118,7 +118,7 @@ jobs:
           script: ./gradlew verifyProdDebuggableAndroidTestScreenshotTest -PdisablePreDex
 
       - name: Run Artifacts
-        if: ${{ always }}
+        if: always()
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 28
@@ -141,7 +141,7 @@ jobs:
           path: OpenEdXMobile/build/screenshotsProdDebuggableAndroidTest
 
       - name: Generate Report
-        if: ${{ always }}
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: report
