--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -88,7 +88,7 @@ jobs:
           ndk: 21.4.7075529
           profile: Nexus 4
           force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-options: -skin 768x1280 -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
           script: avdmanager list
 
@@ -101,7 +101,7 @@ jobs:
           target: google_apis
           ndk: 21.4.7075529
           profile: Nexus 4
-          emulator-options: -no-snapshot-save -no-window -noaudio
+          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
           script: ./gradlew jacocoTestProdDebugUnitTestReport
 
       - name: Run E2E
@@ -114,7 +114,7 @@ jobs:
           target: google_apis
           ndk: 21.4.7075529
           profile: Nexus 4
-          emulator-options: -no-snapshot-save -no-window -noaudio
+          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
           script: ./gradlew verifyProdDebuggableAndroidTestScreenshotTest -PdisablePreDex
 
       - name: Run Artifacts
@@ -127,7 +127,7 @@ jobs:
           target: google_apis
           ndk: 21.4.7075529
           profile: Nexus 4
-          emulator-options: -no-snapshot-save -no-window -noaudio
+          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
           script: |
             ./gradlew copyLintBuildArtifacts
             ./gradlew copyUnitTestBuildArtifacts
