--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -102,7 +102,9 @@ jobs:
           ndk: 21.4.7075529
           profile: Nexus 4
           emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
-          script: ./gradlew jacocoTestProdDebugUnitTestReport
+          script: |
+            chmod +x gradlew
+            ./gradlew jacocoTestProdDebugUnitTestReport
 
       - name: Run E2E
         if: always()
