--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -92,19 +92,19 @@ jobs:
           disable-animations: false
           script: avdmanager list
 
-      - name: Run tests
-        uses: ReactiveCircus/android-emulator-runner@v2
-        with:
-          api-level: 28
-          arch: x86
-          disable-animations: true
-          target: google_apis
-          ndk: 21.4.7075529
-          profile: Nexus 4
-          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
-          script: |
-            chmod +x gradlew
-            ./gradlew jacocoTestProdDebugUnitTestReport
+#      - name: Run tests
+#        uses: ReactiveCircus/android-emulator-runner@v2
+#        with:
+#          api-level: 28
+#          arch: x86
+#          disable-animations: true
+#          target: google_apis
+#          ndk: 21.4.7075529
+#          profile: Nexus 4
+#          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
+#          script: |
+#            chmod +x gradlew
+#            ./gradlew jacocoTestProdDebugUnitTestReport
 
       - name: Run E2E
         if: always()
