--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -112,11 +112,11 @@ jobs:
         with:
           api-level: 28
           arch: x86
-          disable-animations: true
+#         disable-animations: true
           target: google_apis
-          ndk: 21.4.7075529
+#          ndk: 21.4.7075529
           profile: Nexus 4
-          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
+#          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
           script: ./gradlew verifyProdDebuggableAndroidTestScreenshotTest -PdisablePreDex
 
       - name: Run Artifacts
