--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -117,10 +117,14 @@ jobs:
 #          ndk: 21.4.7075529
           profile: Nexus 4
 #          emulator-options: -skin 768x1280 -no-snapshot-save -no-window -noaudio
-          script: ./gradlew verifyProdDebuggableAndroidTestScreenshotTest -PdisablePreDex
+          script: |
+            ./gradlew verifyProdDebuggableAndroidTestScreenshotTest -PdisablePreDex
+            ./gradlew copyLintBuildArtifacts
+            ./gradlew copyUnitTestBuildArtifacts
+            ./gradlew pullProdDebuggableAndroidTestScreenshots -PdisablePreDex
 
       - name: Run Artifacts
-        if: always()
+        if: failure()
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 28
@@ -140,7 +144,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: SS Reports
-          script: ./gradlew pullProdDebuggableAndroidTestScreenshots
           path: OpenEdXMobile/build/screenshotsProdDebuggableAndroidTest
 
       - name: Generate Report
