Update architecture from x86 to x86_64

--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -32,10 +32,6 @@ jobs:
     needs: build
     runs-on: macos-latest
     timeout-minutes: 30
-    strategy:
-      #      matrix:
-      #        api-level: [ 24, 27, 30 ]
-      fail-fast: false
 
     steps:
       - name: Checkout
@@ -83,7 +79,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 28
-          arch: x86
+          arch: x86_64
           target: google_apis
           profile: Nexus 4
           force-avd-creation: false
@@ -94,7 +90,7 @@ jobs:
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 28
-          arch: x86
+          arch: x86_64
           disable-animations: true
           target: google_apis
           profile: Nexus 4
@@ -109,7 +105,7 @@ jobs:
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 28
-          arch: x86
+          arch: x86_64
           disable-animations: true
           target: google_apis
           profile: Nexus 4
@@ -122,7 +118,7 @@ jobs:
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 28
-          arch: x86
+          arch: x86_64
           disable-animations: true
           target: google_apis
           profile: Nexus 4
