--- a/constants.gradle
+++ b/constants.gradle
@@ -1,9 +1,9 @@
 project.ext {
     APPLICATION_ID = "org.edx.mobile"
-    KOTLIN_VERSION = "1.3.50"
-    GRADLE_PLUGIN_VERSION = "3.3.3"
-    BUILD_TOOLS_VERSION = "28.0.3"
-    COMPILE_SDK_VERSION = 28
+    KOTLIN_VERSION = "1.6.10"
+    GRADLE_PLUGIN_VERSION = "7.0.3"
+    BUILD_TOOLS_VERSION = "30.0.2"
+    COMPILE_SDK_VERSION = 30
     // API Level that the application will target
     TARGET_SDK_VERSION = 30
     // Minimum API Level required for the application to run
@@ -13,4 +13,12 @@ project.ext {
     androidXVersion = '1.0.0'
     androidXAppCompactVersion = '1.2.0'
     kotlin_version_billing = "4.0.0"
+    hilt_version = "2.40.1"
+    gms_google_services = "4.3.10"
+
+    // Kotlin extensions library versions
+    androidXLifeCycle = '2.3.0'
+    androidXKotlinCore = '1.6.0'
+    androidXKotlinFramgnet = '1.3.0'
+    newrelic_version = '6.3.1'
 }
