--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -3,9 +3,8 @@ import org.edx.builder.TaskHelper
 buildscript {
     repositories {
         google()
-        jcenter()
         mavenCentral()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
 
     dependencies {
@@ -17,7 +16,7 @@ buildscript {
         classpath 'com.facebook.testing.screenshot:plugin:0.11.0'
         classpath 'com.google.gms:google-services:4.2.0'
         // Jacoco-android Wrapper : https://github.com/arturdm/jacoco-android-gradle-plugin
-        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.5'
     }
 }
 
@@ -26,7 +25,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt' //To enable data binding with kotlin
-apply plugin: 'jacoco-android'
+apply plugin: 'com.dicedmelon.gradle.jacoco-android'
 edx {
     platform = ANDROID
 }
@@ -142,7 +141,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-config:16.5.0'
 
     // Exo Player
-    implementation 'com.google.android.exoplayer:exoplayer:2.9.2'
+    implementation 'com.google.android.exoplayer:exoplayer:2.16.0'
 
     // Google cast sdk
     implementation "androidx.mediarouter:mediarouter:$androidXVersion"
