--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -22,9 +22,9 @@ subprojects {
         // get picked up. We only have one buildSrc plugin
         // so it doesn't really matter, but if we ever get more
         // we should figure this out
-        compile 'org.codehaus.groovy:groovy-all:2.5.4'
-        compile gradleApi()
-        compile 'org.yaml:snakeyaml:1.14'
+        implementation 'org.codehaus.groovy:groovy-all:2.5.4'
+        implementation gradleApi()
+        implementation 'org.yaml:snakeyaml:1.14'
     }
 }
 
