--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -35,6 +35,12 @@
         android:name="org.edx.mobile.instrumentation.EdxInstrumentation"
         android:targetPackage="org.edx.mobile" />
 
+    <!-- Required for Youtube package visibility on Android 11 or higher devices -->
+    <!-- Inspiration: https://stackoverflow.com/a/66473821/10840484 -->
+    <queries>
+        <package android:name="com.google.android.youtube" />
+    </queries>
+
     <application
         android:name=".base.RuntimeApplication"
         android:allowBackup="true"
