--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,4 +1,4 @@
-# Run commitlint on the commit messages in a pull request. Test
+# Run commitlint on the commit messages in a pull request. Test liner
 
 name: Lint Commit Messages
 
