--- a/.github/workflows/SnapshotTestCase.yml
+++ b/.github/workflows/SnapshotTestCase.yml
@@ -34,45 +34,45 @@ jobs:
           distribution: 'adopt'
           java-version: '8'
 
-#      - name: Setup python
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: 2.7
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 2.7
 
-#      - name: Install dependecies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install --user codecov
-#          pip install --user Pillow==6.2.2
+      - name: Install dependecies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --user codecov
+          pip install --user Pillow==6.2.2
 
-#      - name: Gradle cache
-#        uses: actions/cache@v2
-#        with:
-#          path: |
-#            ~/.gradle/caches
-#            ~/.gradle/wrapper
-#         key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/buildSrc/**/*.kt') }}
+      - name: Gradle cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/buildSrc/**/*.kt') }}
 
-#      - name: AVD cache
-#        uses: actions/cache@v2
-#        id: avd-cache
-#        with:
-#          path: |
-#            ~/.android/avd/*
-#            ~/.android/adb*
-#          key: avd-28
+      - name: AVD cache
+        uses: actions/cache@v2
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-28
 
-#      - name: create AVD and generate snapshot for caching
-#        if: steps.avd-cache.outputs.cache-hit != 'true'
-#        uses: reactivecircus/android-emulator-runner@v2
-#        with:
-#          api-level: 28
-#          arch: x86
-#          target: google_apis
-#          profile: Nexus 4
-#          force-avd-creation: false
-#          disable-animations: false
-#          script: echo "Done"
+      - name: create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 28
+          arch: x86
+          target: google_apis
+          profile: Nexus 4
+          force-avd-creation: false
+          disable-animations: false
+          script: echo "Done"
 
       - name: Run tests
         uses: ReactiveCircus/android-emulator-runner@v2
@@ -88,44 +88,44 @@ jobs:
             chmod +x gradlew
             ./gradlew jacocoTestProdDebugUnitTestReport
 
-#      - name: Run E2E
-#        if: always()
-#        uses: ReactiveCircus/android-emulator-runner@v2
-#        with:
-#          api-level: 28
-#          arch: x86
-#          disable-animations: true
-#          target: google_apis
-#          profile: Nexus 4
-#          force-avd-creation: false
-#          emulator-options: -no-snapshot-save
-#          script: |
-#            ./gradlew verifyProdDebuggableAndroidTestScreenshotTest -PdisablePreDex
+      - name: Run E2E
+        if: always()
+        uses: ReactiveCircus/android-emulator-runner@v2
+        with:
+          api-level: 28
+          arch: x86
+          disable-animations: true
+          target: google_apis
+          profile: Nexus 4
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save
+          script: |
+            ./gradlew verifyProdDebuggableAndroidTestScreenshotTest -PdisablePreDex
 
-#      - name: Run Artifacts
-#        uses: ReactiveCircus/android-emulator-runner@v2
-#        with:
-#          api-level: 28
-#          arch: x86
-#          disable-animations: true
-#          target: google_apis
-#          profile: Nexus 4
-#          force-avd-creation: false
-#          emulator-options: -no-snapshot-save
-#          script: |
-#            ./gradlew copyLintBuildArtifacts
-#            ./gradlew copyUnitTestBuildArtifacts
-#            ./gradlew pullProdDebuggableAndroidTestScreenshots -PdisablePreDex
+      - name: Run Artifacts
+        uses: ReactiveCircus/android-emulator-runner@v2
+        with:
+          api-level: 28
+          arch: x86
+          disable-animations: true
+          target: google_apis
+          profile: Nexus 4
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save
+          script: |
+            ./gradlew copyLintBuildArtifacts
+            ./gradlew copyUnitTestBuildArtifacts
+            ./gradlew pullProdDebuggableAndroidTestScreenshots -PdisablePreDex
 
       - name: Upload Reports
-#        if: always()
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: SS Reports
           path: OpenEdXMobile/build/screenshotsProdDebuggableAndroidTest
 
       - name: Generate Report
-#        if: always()
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: report
@@ -137,5 +137,5 @@ jobs:
 #          name: report
 #          path: OpenEdXMobile/build/reports/coverage/debug
 
-#      - name: Upload Test Report
-#        run: bash <(curl -s https://codecov.io/bash) -f "artifacts/reports/jacoco/jacocoTestProdDebugUnitTestReport/jacocoTestProdDebugUnitTestReport.xml"
+      - name: Upload Test Report
+        run: bash <(curl -s https://codecov.io/bash) -f "artifacts/reports/jacoco/jacocoTestProdDebugUnitTestReport/jacocoTestProdDebugUnitTestReport.xml"
