test: restructure instrumentation test cases
- Move Instrumentation test cases into the androidtest directory.
- Remove roboguice components from the android tests and use alternate hilt components.
- Create a shared directory for the common base classes.

fixes: LEARNER-8786

--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -461,13 +461,13 @@ android {
         if (project.hasProperty('ASSETS')) {
             prod.assets.srcDirs = [ASSETS]
         }
-
+        // Shared directory of both unit and instrumentation to use common base classes.
         String sharedTestDir = 'src/sharedTest/java'
         test {
-            java.srcDir sharedTestDir
+            java.srcDirs += sharedTestDir
         }
         androidTest {
-            java.srcDir sharedTestDir
+            java.srcDirs += sharedTestDir
         }
     }
 
