test job trigger

--- a/openedx.yaml
+++ b/openedx.yaml
@@ -1,4 +1,4 @@
-# This file describe's this Open edX repo, as described in OEP-2:
+# This file describe this Open edX repo, as described in OEP-2:
 # http://open-edx-proposals.readthedocs.io/en/latest/oeps/oep-0002.html#specification
 
 nick: andr
