test: fix warnings while executing `jacocoTestProdDebugUnitTestReport`
- The 'kotlin-android-extensions' Gradle plugin is deprecated. so migrate to Jetpack view binding.
- Remove 'dexOptions' cuz obsoleted.
- Update jacoco lib version to fix reporting issue.
- Resolve warnings on `CourseDateViewModel` to fix reporting issues.
- Disable the upload coverage report file cuz `codecov` is not configured for the repo.
ref: https://gist.github.com/huuphuoc1396/497c27c1fac205f5d9c6696016227e1c

fixes: LEARNER-8786

--- a/.github/workflows/androidTestSuite.yml
+++ b/.github/workflows/androidTestSuite.yml
@@ -44,14 +44,14 @@ jobs:
         with:
           name: Unit Test Report
           path: artifacts
-
+      # TODO: Enable once Codecov configured with the repo by setting up `fail_ci_if_error` to true
       # Upload the test report to Codecov for coverage report
       - name: Codecov Report
         uses: codecov/codecov-action@v2
         with:
           directory: artifacts
           files: jacocoTestProdDebugUnitTestReport.xml
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           verbose: true
 
   android_screenshot:
