--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.android.ddmlib.DdmPreferences
+
 allprojects {
     repositories {
         // The order in which you list these repositories matter.
@@ -72,16 +74,6 @@ copyLintBuildArtifacts.dependsOn createBuildArtifactsDirectory
 // desired on every run.
 project.ext.preDexLibs = !project.hasProperty('disablePreDex')
 
-subprojects {
-    project.plugins.whenPluginAdded { plugin ->
-        if ("com.android.build.gradle.AppPlugin".equals(plugin.class.name)) {
-            project.android.dexOptions.preDexLibraries = rootProject.ext.preDexLibs
-        } else if ("com.android.build.gradle.LibraryPlugin".equals(plugin.class.name)) {
-            project.android.dexOptions.preDexLibraries = rootProject.ext.preDexLibs
-        }
-    }
-}
-
 // Increases adb timeout for installing an apk. This tweak is need for slow adb installs on an
 // emulator for CI.
-com.android.ddmlib.DdmPreferences.setTimeOut(600000)
+DdmPreferences.setTimeOut(600000)
